[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pal-e-billing"
version = "0.1.0"
description = "Stripe billing service for Pal-E"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "stripe>=11",
    "pydantic-settings>=2",
]

[project.scripts]
pal-e-billing = "pal_e_billing.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
